# shadowsync

./: .dockerignore  .gitignore  Dockerfile  README.md  compose.yaml  pyproject.toml
.github/workflows/: ci.yml
frontend/: index.html  package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/: App.test.tsx  App.tsx  api.ts  styles.css  types.ts
src/shadowsync/: __init__.py  api.py  demo.py  drift.py  governance.py  ingest.py  models.py  schema.sql  seed.py
tests/: test_api.py  test_demo.py  test_phase2.py  test_phase3.py  test_public_artifacts.py  test_seed.py
