[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "shadowsync"
version = "0.1.0"
description = "Governed synthetic spreadsheet/BI to SQL reconciliation prototype"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115,<1",
  "openpyxl>=3.1,<4",
  "pandas>=2.2,<3",
  "pyarrow>=16,<24",
  "uvicorn[standard]>=0.30,<1",
]

[project.optional-dependencies]
dev = ["httpx>=0.27,<1", "pytest>=8.2,<9"]

[tool.hatch.build.targets.wheel]
packages = ["src/shadowsync"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
pythonpath = ["src"]
